# iot-server-smart-irrigation

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci-go-soc-consumer.yml
backend/go-soc-consumer/: .env.example  .gitignore  .mockery.yml  CLAUDE.md  Dockerfile  GOLANG_TECHNICAL_GUIDELINES.md  GORM_MIGRATION_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  README.md  USER_STORY_DEVICE_ALIVENESS.md  go.mod  go.sum
backend/go-soc-consumer/cmd/server/: main.go
backend/go-soc-consumer/config/: mosquitto.conf
backend/go-soc-consumer/examples/: device_registration_message.json
backend/go-soc-consumer/internal/app/: application.go  application_services.go  container.go
backend/go-soc-consumer/migrations/: 000001_create_devices_table.down.sql  000001_create_devices_table.up.sql
backend/go-soc-consumer/mocks/: DeviceHealthChecker.go  DeviceHealthUseCase.go  DeviceRegistrationUseCase.go  DeviceRepository.go  EventPublisher.go  EventSubscriber.go  MessageConsumer.go  PingUseCase.go  SensorDataUseCase.go  SensorTemperatureHumidityRepository.go  UseCase.go
backend/go-soc-consumer/mocks/stubs/: postgres.go
backend/prompts/: PYTHON_TECHNICAL_GUIDELINES.md
backend/python_ai_sis_assistant/: .env.example  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  Makefile  TECHNICAL_DOCUMENTATION.md  USER_STORIES.md  adk_cli.py  main.py  pyproject.toml
backend/python_ai_sis_assistant/scripts/: check_quality.sh  format_code.sh  run_dev.sh  run_tests.sh  setup_dev.sh
backend/python_ai_sis_assistant/src/app/: container.py  factory.py  lifespan.py
backend/python_ai_sis_assistant/src/config/: __init__.py  settings.py
backend/python_ai_sis_assistant/src/domain/: __init__.py
backend/python_ai_sis_assistant/src/domain/entities/: __init__.py  agent.py  conversation.py  device.py  user.py
backend/python_ai_sis_assistant/src/domain/errors/: __init__.py  base.py  system_errors.py  user_errors.py
backend/python_ai_sis_assistant/src/domain/events/: __init__.py  base.py  conversation_events.py  device_events.py
backend/python_ai_sis_assistant/src/domain/ports/: __init__.py  agent_registry.py  conversation_repository.py  llm_client.py  ping_service.py
backend/python_ai_sis_assistant/src/domain/ports/repositories/: __init__.py  conversation_repository.py  device_repository.py
backend/python_ai_sis_assistant/src/domain/ports/services/: __init__.py  conversation_service.py  mcp_service.py  nlp_service.py
backend/python_ai_sis_assistant/src/domain/value_objects/: __init__.py  agent_types.py  conversation.py
backend/python_ai_sis_assistant/src/infraestructure/ai/adk/agents/manager_agent/: agent.py
backend/python_ai_sis_assistant/src/infrastructure/: __init__.py
backend/python_ai_sis_assistant/src/infrastructure/agents/: __init__.py  local_assistant.py  peja_coordinator.py  web_search_agent.py
backend/python_ai_sis_assistant/src/infrastructure/clients/: local_knowledge_client.py  web_search_client.py
backend/python_ai_sis_assistant/src/infrastructure/llm/: gemini_client.py
backend/python_ai_sis_assistant/src/infrastructure/logging/: __init__.py  config.py  logger.py
backend/python_ai_sis_assistant/src/infrastructure/repositories/: __init__.py  agent_registry.py  memory_conversation_repository.py
backend/python_ai_sis_assistant/src/presentation/http/handlers/: agent_handler.py  chat_handler.py  health_handler.py  ping_handler.py
backend/python_ai_sis_assistant/src/presentation/http/middleware/: __init__.py  logging.py  rate_limit.py
backend/python_ai_sis_assistant/src/presentation/http/routes/: __init__.py  agent_routes.py  chat_routes.py
backend/python_ai_sis_assistant/src/usecases/: __init__.py  agent_orchestrator.py  conversation_manager.py
backend/python_ai_sis_assistant/src/usecases/ping/: ping_service.py
backend/python_ai_sis_assistant/tests/: __init__.py  conftest.py  test_health.py
docs/architecture/: ARCHITECTURE.md
infrastructure/nats/: nats-minimal.conf  nats-working.conf  nats.conf
infrastructure/postgres-config/: init-pg-hba.sh  pg_hba.conf
services/go-consumers/: .gitignore  .mockery.yaml  Makefile  go.mod  go.sum
services/go-consumers/configs/: config.yaml
services/go-consumers/docs/: go-consumer-architecture.md
(+108 files in other folders)
